# realworld-axum-api

./: .env  Cargo.toml  api.http  readme.md
migrations/: 20250928010313_create-users-table.sql  20251002070816_create-email-verification-tokens.sql  20251002071644_add-email-verified-to-users.sql  20251005233618_create-password-reset-tokens.sql  20251015124923_create-refresh-tokens.sql  20251022071323_add-token-rotation-fields.sql
src/: handlers.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/handlers/: auth.rs  health.rs
src/models/: password_reset_token.rs  refresh_token.rs  user.rs
src/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  traits.rs  user_repository.rs
src/schemas/: auth_schemas.rs  mod.rs  user_schemas.rs
src/services/: email_service.rs
